--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "reactstrap": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=2000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
