--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "2.1.0",
     "dateformat": "^3.0.3",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
