--- a/.github/workflow/NodeJS.yml
+++ b/.github/workflow/NodeJS.yml
@@ -1,4 +1,5 @@
-name: CI
+  
+name: Node CI
 
 on: [push]
 
@@ -6,12 +7,23 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm install -g yarn
+    - name: yarn install, build, and test
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        yarn
+        yarn lint
+        yarn build
+        yarn test
+      env:
+        CI: true
